edit NavBar big style edit

--- a/frontend/src/components/ButtonWithCounter/ButtonWithCounter.css
+++ b/frontend/src/components/ButtonWithCounter/ButtonWithCounter.css
@@ -6,6 +6,7 @@
   text-align: center;
   background-color: #fff;
   margin-bottom: 12px;
+  border-radius: 4px;
 }
 
 .button-counter__quantity-wrapper {
