--- a/frontend/src/components/Main.css
+++ b/frontend/src/components/Main.css
@@ -3,7 +3,7 @@
 .main {
   width: 100%;
   height: auto;
-  font-family: 'Inter', sans-serif;
+  /* font-family: 'Inter', sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
