--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,115 +1,138 @@
 .navbar-container {
   position: relative;
-  width: 100%;
-  height: 60px;
+  width: 90%;
+  height: 76px;
+  margin: 0 auto;
   background-color: #99ca74;
   display: flex;
   justify-content: space-between;
-  padding: 10px 140px;
+  padding: 0 140px;
   align-items: center;
+  border-radius: 0 0 25px 25px;
+  border-bottom: 4px solid #589377;
 }
 
 .navbar__logo-link {
-  font-size: 18px;
-  line-height: 18px;
-  font-weight: 600;
-  text-decoration: none;
-  color: #fff;
+  position: relative;
+  margin-top: 10px;
 }
 
-.navbar__logo-link:hover {
+.navbar__logo-link:hover .logo-link__name {
+  transform: rotate(0deg) scale(1.1);
+}
+
+/* .navbar__logo-link:hover {
   color: #fff;
   opacity: .5;
-}
+} */
 
 .navbar__favourites-button {
-  font-size: 16px;
-  line-height: 16px;
-  font-weight: 500;
+  display: flex;
+  align-items: center;
   margin-left: 50px;
   text-decoration: none;
-  color: #fff;
 }
 
 .navbar__favourites-button:hover {
-  color: #fff;
-  opacity: .5;
+  color: #ff6666;
 }
 
-.navbar__auth-button:hover {
+.favourites-button__text {
+  margin: 0 0 5px 0;
+  font-size: 16px;
+  line-height: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #fff;
+  text-shadow: 2px 2px 1px #0f5132;
+}
+
+.favourites-button__text_active {
+  color: #dc3557;
+  text-shadow: 2px 2px 1px #ffffff;
+}
+
+.navbar__favourites-button:hover .favourites-button__text {
+  color: #0f5132;
+  text-shadow: 2px 2px 1px #ffffff;
+}
+
+.navbar__auth-button {
   cursor: pointer;
+  margin-left: 10px;
+}
+
+.navbar__auth-button path {
+  stroke: #589377;
+  transition: .5s;
+}
+
+.navbar__auth-button svg:hover path {
+  fill: #fff;
+  stroke: #ff6666;
 }
 
 .navbar__user-side {
   display: flex;
   align-items: center;
+  height: 100%;
 }
 
 .navbar__email {
-  color: #fff;
+  margin: 0;
+  padding: 8px;
   font-size: 16px;
   line-height: 16px;
-  font-weight: 400;
-  margin: 0;
+  font-weight: 500;
+  color: #fff;
+  text-shadow: 2px 2px 3px #000;
+  border-radius: 4px;
+  background-color: rgb(88, 147, 119, .5); 
 }
 
 .navbar__login {
-  cursor: pointer;
-  color: #000;
+  color: #99ca74;
   font-size: 15px;
   line-height: 15px;
   font-weight: 500;
-  border: 1px solid #9acd32;
+  cursor: pointer;
   border-radius: 4px;
-  padding: 4px;
   display: flex;
   align-items: center;
-  background-color: #fff;
-}
-
-.navbar__login:hover {
-  background-color: #ffffff;
-  color: #000;
+  background-color: #589377;
+  box-shadow: 0px 0px 10px #479e5c;
 }
 
 .navbar__login-text {
   margin: 0;
+  text-align: center;
+  padding: 13px 28px;
+}
+
+.navbar__login:hover {
+  color: #fff;
+  box-shadow: 0px 0px 18px #479e5c;
 }
 
 .navbar__admin-button {
-  color: #fff;
-  width: 100px;
-  padding: 10px 5px;
-  font-size: 12px;
-  line-height: 12px;
-  margin: 0 10px;
-  text-align: center;
-  border: 1px solid #fff;
-  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 0 0 30px;
 }
 
 .navbar__admin-button:hover {
   cursor: pointer;
-  background-color: #fff;
-  color: #559d20;
 }
 
-.navbar__login-button {
-  margin-left: 4px;
-  width: 22px;
-  height: 22px;
-  background-image: url('../../assets/login.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
+.navbar__admin-button path {
+  fill: #e8ffb9;
+  transition: .5s;
 }
 
-.navbar__auth-button_logout {
-  width: 24px;
-  height: 24px;
-  background-image: url('../../assets/logout.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  margin-left: 20px;
+.navbar__admin-button svg:hover path {
+  fill: #589377;
+  stroke: #e8ffb9;
 }
 
 .navbar__auth-button_logout:hover {
@@ -118,6 +141,36 @@
   background-image: url('../../assets/logout-active.svg');
   background-repeat: no-repeat;
   background-size: contain;
+}
+
+.navbar-main {
+  position: relative;
+}
+
+.navbar__nav-side {
+  display: flex;
+  align-items: center;
+}
+
+.logo-link__pic {
+  width: 100px;
+  height: auto;
+  transform: rotate(-15deg);
+}
+
+.logo-link__name {
+  margin: 0;
+  position: absolute;
+  bottom: 40%;
+  left: 10px;
+  font-size: 18px;
+  line-height: 18px;
+  font-weight: 700;
+  text-decoration: none;
+  color: #fff;
+  text-shadow: 3px 3px 1px #000;
+  transform: rotate(-15deg);
+  transition: .3s;
 }
 
 @media screen and (max-width: 1300px) {
@@ -166,7 +219,7 @@
     transition: 1s;
   }
   .navbar__logo-link:before {
-    content: url('../../assets/watermelon.svg');
+    content: url('../../assets/watermelon-logo.svg');
     visibility: visible;
   }
   .navbar__logo-link:hover {
