--- a/frontend/src/components/BasketContainer/BasketContainer.css
+++ b/frontend/src/components/BasketContainer/BasketContainer.css
@@ -1,7 +1,11 @@
 .basket-container {
+  width: 50px;
+  height: 100%;
   position: relative;
   display: flex;
+  justify-content: center;
   margin-left: 20px;
+  background-color: rgba(88, 147, 119, 0.5);
 }
 
 .basket-container__button-wrapper {
@@ -19,6 +23,9 @@
   color: #fff;
   margin: 0;
   margin-bottom: 2px;
+  background-color: #589377;
+  padding: 2px;
+  border-radius: 4px;
 }
 
 .basket-container__empty {
