--- a/frontend/src/components/Spinner/Spinner.css
+++ b/frontend/src/components/Spinner/Spinner.css
@@ -4,7 +4,7 @@
   left: calc(50% - 50px);
   width: 50px;
   height: 50px;
-  background-image: url('../../assets/watermelon.svg');
+  background-image: url('../../assets/watermelon-logo.svg');
   background-position: center;
   background-repeat: no-repeat;
   animation: spinner .6s linear infinite;
