--- a/frontend/src/pages/Auth/Auth.css
+++ b/frontend/src/pages/Auth/Auth.css
@@ -18,10 +18,10 @@
 }
 
 .auth__title {
-  color: #212529;
+  color: #6cab7b;
   font-size: 28px;
   line-height: 28px;
-  font-weight: 400;
+  font-weight: 600;
   margin: 0 auto 10px;
 }
 
@@ -133,7 +133,7 @@
   margin: 0;
   width: 100px;
   height: 40px;
-  background-color: #9acd32;
+  background-color: #589377;
   color: #fff;
   border-radius: 4px;
   cursor: pointer;
@@ -185,12 +185,12 @@
   line-height: 15px;
   font-weight: 600;
   margin: 0 0 0 10px;
-  color: #9acd32;
+  color: #6cab7b;
   opacity: 1;
 }
 
 .auth__link:hover {
-  color: #9acd32;
+  color: #6cab7b;
   opacity: .8;
 }
 
