--- a/frontend/src/components/SearchForm/SearchForm.css
+++ b/frontend/src/components/SearchForm/SearchForm.css
@@ -65,8 +65,7 @@
   background-repeat: no-repeat;
   background-position: center;
   border: none;
-  border-bottom: 1px solid #2b7452;
-  background-color: #2b7452;
+  background-color: rgb(88, 147, 119, .5);
   border-radius: 0 4px 4px 0;
 }
 
