--- a/frontend/src/pages/Basket/Basket.css
+++ b/frontend/src/pages/Basket/Basket.css
@@ -16,8 +16,8 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: #fff;
-  filter: blur(20px);
+  background-color: rgb(255, 255, 255, .5);
+  filter: blur(10px);
 }
 
 .basket-page__sidebar {
@@ -28,7 +28,7 @@
   border-radius: 4px;
   margin: 20px 0;
   background-color: #9dc77e;
-  box-shadow: 0px 0px 10px 2px rgba(63, 63, 63, 0.3);
+  border-bottom: 5px solid #589377;
   z-index: 2;
 }
 
