--- a/frontend/src/components/BasketPageCard/BasketPageCard.css
+++ b/frontend/src/components/BasketPageCard/BasketPageCard.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   border: 1px solid rgb(224, 224, 224);
   border-radius: 4px;
-  box-shadow: 0px 0px 2px 0px rgba(63, 63, 63, 0.3);
+  border-bottom: 4px solid #9dc77e;
   background-color: #fff;
 }
 
@@ -14,6 +14,7 @@
   width: 178px;
   height: 178px;
   border-radius: 4px 0 0 4px;
+  border-bottom: 3px solid #9dc77e;
 }
 
 .basket-card__info {
