--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -187,6 +187,7 @@
     display: flex;
     flex-direction: column;
     background-color: #9dc77e;
+    padding: 14px 0 8px 0;
   }
   .navbar-container {
     height: 40px;
@@ -196,12 +197,19 @@
     font-size: 15px;
     line-height: 15px;
     font-weight: 500;
+    margin-top: 0;
   }
   .navbar__favourites-button {
     font-size: 15px;
     line-height: 15px;
     font-weight: 400;
     margin-left: 40px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .navbar-container {
+    border-bottom:none;
   }
 }
 
